--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
         import { getDatabase, ref, onValue, push, update, remove, set } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyA7EFA0dC1ZPikyJSHuqnhmul-4dnugfp0",
-            authDomain: "projetos-complexos.firebaseapp.com",
-            databaseURL: "https://projetos-complexos-default-rtdb.firebaseio.com",
-            projectId: "projetos-complexos",
-            storageBucket: "projetos-complexos.firebasestorage.app",
-            messagingSenderId: "473821406890",
-            appId: "1:473821406890:web:2b271ae806ecdac18892d3",
-            measurementId: "G-L5Z04Z3HG3"
-        };
+  apiKey: "AIzaSyDMRrgMcEvUaiI7sNbmLwy-9Eim13979LY",
+  authDomain: "projetos-compartilhados.firebaseapp.com",
+  databaseURL: "https://projetos-compartilhados-default-rtdb.firebaseio.com",
+  projectId: "projetos-compartilhados",
+  storageBucket: "projetos-compartilhados.firebasestorage.app",
+  messagingSenderId: "517091337770",
+  appId: "1:517091337770:web:596b8c0da2b7c3e45b4553",
+  measurementId: "G-2DSZ3QKRB2"
+};
 
         const app = initializeApp(firebaseConfig);
         const db = getDatabase(app);
